--- a/MyFirstApplication/app/build.gradle
+++ b/MyFirstApplication/app/build.gradle
@@ -7,7 +7,7 @@ android {
     compileSdk 30
 
     defaultConfig {
-        applicationId "com.example.shtek7777"
+        applicationId "com.shtek7777"
         minSdk 21
         targetSdk 30
         versionCode 1
