--- a/MyFirstApplication/app/src/main/AndroidManifest.xml
+++ b/MyFirstApplication/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.shtek7777">
+    package="com.shtek7777">
 
     <application
         android:allowBackup="true"
