--- a/MyFirstApplication/app/src/main/AndroidManifest.xml
+++ b/MyFirstApplication/app/src/main/AndroidManifest.xml
@@ -9,6 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyFirstApplication">
+        <service
+            android:name=".fragments.ContactService"
+            android:enabled="true"
+            android:exported="true" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
