--- a/MyFirstApplication/app/src/main/AndroidManifest.xml
+++ b/MyFirstApplication/app/src/main/AndroidManifest.xml
@@ -11,8 +11,7 @@
         android:theme="@style/Theme.MyFirstApplication">
         <service
             android:name=".fragments.ContactService"
-            android:enabled="true"
-            android:exported="true" />
+            android:enabled="true" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
